--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+solc_version = '0.8.21'
+auto_detect_solc = false
+fs_permissions = [
+{access = "read", path = "./out"},
+]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
